# SE-390

./: .gitignore  readme.md
fluid_sim/: 1d_sim.py  2d_sim.py  2d_sim_wave_equation.py  advection.py  advection_test.py
fluid_sim_refactor/: 2d_sim.py  advection.py  advection_test.py
pcl_test/: CMakeLists.txt  features.cpp  main.cpp  open3d_global_registration.py  pcaScaling.cpp  utils.cpp  utils.h
pcl_test/Wolfhead/: Theoretical_n.pcd  Theoretical_n_noback.pcd  generated_wolf.pcd  generated_wolf_wall.pcd
research-notes/: FPFS-Summary.md  PointSIFT.md  SCALE RATIO ICP FOR 3D POINT CLOUDS WITH DIFFERENT SCALES.md  Scale matching of 3D point clouds by finding keyscales with spin images.md  example.md  real-time_point_cloud_matching.md
sim_fluid/: compile_2d_animation.py  gen_stl.py  main.py  save_cam_transform.py  sim_1d.py  sim_2d.py  template.blend  utils.py  vis_stl.py
